Blender (game engine) crashes when an object(with any physics mode) collides with another object. read description for the details. #45341

Closed
opened 2015-07-06 10:33:23 +02:00 by vikrant singh · 12 comments

System Information
windows 8.1, nvidea geforce GT 635M

Blender Version
Broken: 2.75.2, 2.75, 2.74
Worked: not found.

Short description of error
Blender (game engine) crashes when an object say, "A"(with any physics mode), collides with another object, say "B". object A has a collision sensor and actuator applied to end the object, when it collides with object B. but when it collides with the object , blender just closes.

Exact steps for others to reproduce the error
to reproduce the error, just press "p" to play the game and collide with the blue cube(which is moving).
you can move with the arrow keys and turn with mouse just like in any other FPS game.

**System Information** windows 8.1, nvidea geforce GT 635M **Blender Version** Broken: 2.75.2, 2.75, 2.74 Worked: not found. **Short description of error** Blender (game engine) crashes when an object say, "A"(with any physics mode), collides with another object, say "B". object A has a collision sensor and actuator applied to end the object, when it collides with object B. but when it collides with the object , blender just closes. **Exact steps for others to reproduce the error** to reproduce the error, just press "p" to play the game and collide with the blue cube(which is moving). you can move with the arrow keys and turn with mouse just like in any other FPS game.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @vikrant

Added subscriber: @vikrant
Author
the blender file can be found at https://drive.google.com/file/d/0BxiRySxWvi6hOXBYd180WEthclU/view?usp=sharing

Added subscriber: @Sergey

Added subscriber: @Sergey

Can confirm the crash, but will leave it up to BGE maintainers to triage the report.

Can confirm the crash, but will leave it up to BGE maintainers to triage the report.
Author

i think i found the problem,
http://blender.stackexchange.com/questions/18938/why-does-blender-crash-when-my-missile-disapears

so the problem was that the camera was parented to the object and there was nothing to send the output once the object disappears. if we play the game without going to the camera view , then blender does not crash. but instead of closing it would be better if displays an error message and stops the game.

i think i found the problem, http://blender.stackexchange.com/questions/18938/why-does-blender-crash-when-my-missile-disapears so the problem was that the camera was parented to the object and there was nothing to send the output once the object disappears. if we play the game without going to the camera view , then blender does not crash. but instead of closing it would be better if displays an error message and stops the game.

I don't think blender should crash even in such situation.

I don't think blender should crash even in such situation.
Author

In #45341#320094, @Sergey wrote:
I don't think blender should crash even in such situation.

yes , i agree

> In #45341#320094, @Sergey wrote: > I don't think blender should crash even in such situation. yes , i agree
Member

Added subscribers: @kupoman, @JorgeBernalMartinez

Added subscribers: @kupoman, @JorgeBernalMartinez
Daniel Stokes was assigned by Jorge Bernal 2015-07-06 14:01:16 +02:00
Member

I confirm the bug also.

I assign to @kupoman as the crash cames from UpdateObjectLods when we don'r have an active camera.

I confirm the bug also. I assign to @kupoman as the crash cames from UpdateObjectLods when we don'r have an active camera.

This issue was referenced by 12583287e7

This issue was referenced by 12583287e78505f45d62d9fd419371be66debf93
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45341
No description provided.